--- a/client/main.html
+++ b/client/main.html
@@ -1,5 +1,5 @@
 <head>
-  <title>BOOOOOOM Mike Meteor-Files: File Streaming</title>
+  <title>Andrei  Meteor-Files: File Streaming</title>
 </head>
 
 <body>
