Pull audios from Audio to a single card

--- a/client/main.html
+++ b/client/main.html
@@ -26,6 +26,7 @@
   {{#with audioFile}}
   <audio controls preload="auto">
     <source src="{{link}}" type="{{type}}">
+      {console.log("BOBS",Link)}
   </audio>
   {{/with}}
 </template>
