--- a/client/main.html
+++ b/client/main.html
@@ -1,11 +1,18 @@
 <head>
-  <title>Andrei  Meteor-Files: File Streaming</title>
+  <title>Andrei Meteor-Files: File Streaming</title>
 </head>
 
 <body>
   <div id="app"></div>
 
 </body>
+
+<template name="message">
+  <li class="message">
+    <div class="username">{{username}}</div>
+    <div class="message-text">{{messageText}}</div>
+  </li>
+</template>
 
 
 <template name="sounds">
@@ -14,8 +21,19 @@
 
 
 
+
+
+
+<template name="chatwindow">
+  <ul class="message-window">
+    {{#each recentMessages}} {{>message}} {{/each}}
+  </ul>
+</template>
+
+
+
 <template name="uploadForm">
-   
+
   {{#with currentUpload}} Uploading
   <b>{{file.name}}</b>:
   <span id="progress">{{progress.get}}%</span>
@@ -27,8 +45,7 @@
 <template name="files">
   {{#with audioFile}}
   <audio controls preload="auto">
-    <source src="{{link}}" type="{{type}}">
-      {console.log("BOBS",Link)}
+    <source src="{{link}}" type="{{type}}"> {console.log("BOBS",Link)}
   </audio>
   {{/with}}
 </template>
