Change login form font color

--- a/client/main.html
+++ b/client/main.html
@@ -22,7 +22,7 @@
 <template name="files">
   {{#with audioFile}}
   <audio controls preload="auto">
-    <source src="{{link}}" type="{{type}}"> {console.log("BOBS",Link)}
+    <source src="{{link}}" type="{{type}}"> }
   </audio>
   {{/with}}
 </template>
